--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             }
             a {
                 text-decoration: none;
-                color: #f2f2f2;
+                color: #474747;
             }
             a:hover {
                 color: #110242;
